<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="4dp"
    android:layout_marginVertical="4dp"
    app:cardCornerRadius="8dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_activity_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/activity_icon_desc"
            app:tint="@color/orange_bold"
            tools:src="@drawable/ic_notification" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_activity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/notification"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:maxLines="1"
                android:ellipsize="end" />

            <TextView
                android:id="@+id/tv_activity_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/notifications_content_desc"
                android:textSize="13sp"
                android:textColor="@color/gray"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_marginTop="2dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_activity_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/time_just_now"
            android:textSize="12sp"
            android:textColor="@color/gray"
            android:layout_marginStart="12dp"
            android:gravity="end" />

    </LinearLayout>
</androidx.cardview.widget.CardView>